fix bash